src/css/style.css
@font-face {
    font-family: "Louis George Cafe";
    src: url("../fonts/louis-george-cafe.ttf");
}

@media (max-width: 400px) {
    html {
        font-size: 90%;
    }
}

@media (max-width: 970px) {
    #main-nav {
        display: none;
    }
}

@media (min-width: 971px) {
    #mobile-nav {
        display: none;
    }
}

@media (min-width: 800px) {
    .item-grid {
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 1.5rem;
    }
}

/* DESKTOP */
@media (min-width: 1152px) {
    #main-nav a:hover {
        text-decoration: underline;
    }

    .project:hover {
        background-color: #485d9b;
        transform: translateY(-0.15rem);
    }

    #submit:hover {
        background-color: #738edf;
    }

    .content-section {
        max-width: 1152px;
        margin: auto auto;
    }

    .social-media-icon:hover {
        transform: translateY(-0.15rem);
    }

    #branding, #projects {
        margin: 0;
        padding: 1.5rem calc(50vw - 584px);
    }
}

html, body {
    font-family: "Louis George Cafe", "Sans-Serif", "Arial";
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}

main {
    transform: translateY(-3rem);
    margin-bottom: -3.5rem;
}

a {
    text-decoration: none;
}

h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
}

h2 {
    font-size: 2.5rem;
}

p {
    font-size: 1.75rem;
    line-height: 2.5rem;
}

.icon {
    height: 2.5rem;
    width: 2.5rem;
}

.icon-grid {
    display: grid;
    grid-template-columns: repeat(4, 5rem);
}

.blue {
    fill: #a2b8fb;
    color: #a2b8fb;
}

.white {
    fill: #e8eeff;
    color: #e8eeff;
}

header {
    background-color: #23355d;
    color: #e8eeff;
}

footer {
    background-color: #202020;
}

#branding {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #eaf2ee;
}

nav a {
    color: #eaf2ee;
    font-size: 1.5rem;
}

#mobile-nav #navbar-open {
    cursor: pointer;
    background: none;
    border: none;
    fill: #e8eeff;
}

#mobile-nav #navbar-close, #mobile-nav ul {
    position: fixed;
    height: 100%;
    width: 0%;
    z-index: 1;
    top: 0;
}

#mobile-nav #navbar-close {
    left: 0;
    background-color: #202020;
    opacity: 0.5;
}

#mobile-nav ul {
    right: 0;
    background-color: #202020;
    transition: 0.3s;
    transition-property: width;
    text-align: left;
    list-style: none;
    line-height: 4rem;
}

#main-nav {
    text-align: right;
}

#main-nav #inline-nav li {
    display: inline;
    list-style: none;
    margin-left: 1.5rem;
}

#about {
    padding-bottom: 2.5rem;
}

.content-section {
    padding: 1.5rem;
}

.item-grid {
    display: grid;
    grid-row-gap: 1.5rem;
}

.item-container {
    padding: 1rem;
    border-radius: 0.25rem;
    box-shadow: 0px 1px 5px grey;
    display: grid;
    grid-gap: 0.75rem;
}

.item-header {
    font-size: 2rem;
}

.item-footer {
    font-style: oblique;
    font-size: 1.25rem;
    max-width: 100%;
}

.skill {
    background-color: #f5f5f5;
    color: #202020;
}

#projects {
    padding: 1.5rem -1.5rem;
    background-color: #e8eeff;
}

.project {
    background-color: #23355d;
    color: #e8eeff;
    transition: 0.3s;
}

label {
    font-size: 1.75rem;
}

.form-input-status {
    font-size: 1.5rem;
    font-style: oblique;
}

input, #message {
    width: 100%;
    border: 1px solid #ccc;
    border-radius: 0.25rem;
    box-sizing: border-box;
    font-family: "Louis George Cafe", "Sans-Serif", "Arial";
    font-size: 1.5rem;
    margin: 0.75rem 0rem;
    padding: 0.75rem 0.5rem;
    resize: vertical;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

input[type=submit] {
    background-color: #485d9b;
    color: white;
    border: none;
    cursor: pointer;
}

#social-media {
    justify-content: center;
    justify-items: center;
}

.social-media-icon {
    transition: 0.3s;
}

#copyright {
    text-align: center;
    font-size: 1rem;
}

